header overflow fix

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -17,7 +17,7 @@
     src: url('fonts/rotulista-regular-webfont.woff2') format('woff2'),
          url('fonts/rotulista-regular-webfont.woff') format('woff'),
          url('fonts/rotulista-regular-webfont.ttf') format('truetype');
-    font-weighfonts/t: normal;
+    font-weighfontst: normal;
     font-style: normal;
 
 }
